--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>us.byteb.playground</groupId>
-    <artifactId>partitioned-execution-playground</artifactId>
+    <artifactId>thread-party</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -30,7 +34,7 @@
     </dependencies>
 
     <build>
-        <finalName>partitioned-execution</finalName>
+        <finalName>thread-party</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -50,7 +54,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>us.byteb.playground.partexec.App</mainClass>
+                            <mainClass>us.byteb.playground.threadparty.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
